css/main.css
body {
  overflow: hidden;
}

.bg {
  background-image: url("");
  background-repeat: no-repeat;
  background-position: center;
  background-attachment: fixed;
  background-size: cover; /* <------ */

  width: auto;
  height: auto;
  min-height: 100%;
  min-width: 100%;
  padding: 0;
  position: absolute;
  z-index: -1;
  display: none;

  -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
  -moz-animation: fadein 2s; /* Firefox < 16 */
  -ms-animation: fadein 2s; /* Internet Explorer */
  -o-animation: fadein 2s; /* Opera < 12.1 */
  animation: fadein 2s;
}

/* Safari, Chrome and Opera > 12.1 */
@keyframes fadein {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

#masterContainer {
  display: flex;
  flex-wrap: wrap;
  align-content: stretch;
  height: 100vh;
  width: 100vw;

}
.flex-container {
  display: flex;
  flex-direction: column;

  
}

.flex-container.flex-center-bottom {
  display: flex;


  align-self: flex-end;


  top: 20em;
  bottom: 0;
  margin-bottom: 0;
  margin-left: auto;
  margin-right: auto;
}

.absolute-center {
  position: absolute;
  top: 50vh;
  left: 50vw;
  /* bring your own prefixes */
  transform: translate(-50%, -50%);
}
.search {
  border-radius: 0.5em;
  padding-left: 0.4em;
  padding-right: 1.2em;
  font-family: Palatino, "Palatino Linotype", "Palatino LT STD", "Book Antiqua",
    Georgia, serif;
  width: 23vw;
  height: 5vh;
  margin-left: auto;
  margin-right: auto;
}

.search:focus {
  outline: none;
}

.submit {
  position: absolute;
  height: 2em;
  width: 2em;
  z-index: 1;
  right: 0.5em;
  top: 0.7em;
}

button,
input {
  font-size: 2em;
}


.weather-setting-icon {
  position: absolute;
  width: 2em;
  height: 2em;
  left: 0.2em;
  top: 7em;
  -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
  filter: grayscale(100%);
}

.weather-setting-icon.active {
  transition: 0.2s;
  -webkit-filter: grayscale(0);
  filter: grayscale(0);
}

.freeze-setting-icon {
  position: absolute;
  width: 2em;
  height: 2em;
  left: 0.2em;
  top: 9.2em;
  -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
  filter: grayscale(100%);
}

.freeze-setting-icon.active {
  transition: 0.2s;
  -webkit-filter: grayscale(0);
  filter: grayscale(0);
}

.menu-nuke-history {
  position: absolute;
  width: 2em;
  height: 2em;
  left: 0.2em;
  top: 12.2em;
  z-index: 10;
}

.bg-picker {
  position: absolute;
  width: 2em;
  height: 2em;
  top: 2em;
  left: 0.5em;
  -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
  filter: grayscale(100%);
}

.topsites-container {

  display: inline-flex;
  margin-top: 10em;
  grid-row: 1;
  width: 30rem;
  flex-wrap: wrap;
  margin-left: 1.7em;
  padding-left: .5em;
  padding-bottom: 1em;
  z-index: 1000;
}

.topsites-box:hover:before {
content: attr(data-title) '\A\A' attr(data-link);
  white-space: pre-line;

flex-grow: 1;

flex-wrap: wrap;
padding: .7em .7em .7em .7em;

margin-left: -2em;
font-size: 1.3em;
width: 100vw;
margin-top: 4.2em;
height: max-content;


background: black;
color: white;
border: 2px solid white;

border-radius: 1em;

animation-name: fadeInOpacity;
animation-iteration-count: 1;
animation-timing-function: ease-in;
animation-duration: .5s;

z-index: -1;

}

.topsites-box:hover::after {
	content: '';
  position: absolute;
	top: 0;
	left: 50%;
	width: 0;
	height: 0;
	border: 20px solid transparent;
  border-bottom-color: black;

  border-left: 3px solid white;
  border-top: 0;
	margin-left: -10px;
  margin-top: 4.4em;
  
  animation-name: fadeInOpacity;
animation-iteration-count: 1;
animation-timing-function: ease-in;
animation-duration: .5s;

}

.topsites-box {
  background: rgb(255, 255, 255, .85);
  margin-right: 1.3em;
  margin-top: 1.3em;
  border-radius: 3em;
  
  flex-direction: row;
  display: flex;

  height: 72px;
  width: 72px;  
	opacity: 1;
	animation-name: fadeInOpacity;
	animation-iteration-count: 1;
	animation-timing-function: ease-in;
  animation-duration: 1s;

  transform: translateZ(0);
}

.topsites-box::before {
  display: block;
  content: ' ';
  background-image: url('../icons/history.png');
  background-size: 28px 28px;
  border-radius: 3em;
  height: 28px;
  width: 28px;
  z-index: 10;

  transform: translateZ(0);
}


.topsites-box > img {
  position: absolute;
  width: 72px;
  height: 72px;
  border-radius: 3em;
	opacity: 1;
	animation-name: fadeInOpacity;
	animation-iteration-count: 1;
	animation-timing-function: ease-in;
  animation-duration: 1s;
  box-shadow: -4px -4px 0 #000, 4px -4px 0 #000, -4px 4px 0 #000,
    3px 3px 0 #000;

    transform: translateZ(0);
}

@keyframes fadeInOpacity {
	0% {
		opacity: 0;
	}
	100% {
		opacity: 1;
	}
}

.topsites-box > img:hover {
  opacity: 0.8;
  transform: translateZ(0);
}

.bg-picker:hover:not(.active) {
  opacity: 0.7;
}

.bg-picker.cow {
  width: 2.6em;
  height: 2.6em;
  top: 4.2em;
}

.bg-picker.tabby {
  left: 3em;
}

.bg-picker.vanilla {
  top: 1.8em;
  width: 2.5em;
  height: 2.5em;
  left: .3em;
}

.settings-divider {
  content: "";
  top: 7em;
  width: 10em;
  height: 5em;
  display: inline-flex;
  margin-right: -20em;
  position: absolute;
  background: grey;
}

.settings-menu-name {
  position: absolute;
  font-size: 1em;
  display: inline-flex;
  width: 10em;
  height: 1.2em;
  color: white;
  background: grey;
  padding-left: 1.3em;
  padding-top: .2em;
  font-weight: 900;
  font-family: 'Courier New', Courier, monospace;
  letter-spacing: -.1em;
}

.settings-menu-name-reset {
  position: absolute;
  height: 1em;
  width: 1em;
  display: inline-flex;
  left: auto;
  padding-left: .2em;
  padding-top: .1em;
  z-index: 100;
}


.bg-picker.active {
  transition: 0.2s;
  -webkit-filter: grayscale(0);
  filter: grayscale(0);
}

.settings {
  position: absolute;
  display: flex;
  width: 2em;
  height: 2em;
  bottom: 0;
  right: 0;
  margin-right: .5em;
  margin-bottom: 0.5em;
  z-index: 10;
}
/* ... */

